tests/ok/vector-pop-push-capacity.ari
fn main() -> i64 {
  var values: Vec[i64] = [1, 2];
  let removed: i64 = values.pop();
  values.push(3);
  return values.capacity() + len(values) + removed + values[1];
}
