tests/errors/vector-method-index-type.ari
fn main() -> i64 {
  var values: Vec[i64] = [1, 2, 3];
  return values.get(true);
}
